--- a/1.Scripts/VAF_density_plots_AJS.ipynb
+++ b/1.Scripts/VAF_density_plots_AJS.ipynb
@@ -61,10 +61,10 @@
    "source": [
     "# Add as many maf files as required\n",
     "\n",
-    "c1 = pd.read_csv('~/Downloads/to_Alejandro/clone1.maf', sep='\\t', skiprows=0)\n",
-    "c2 = pd.read_csv('~/Downloads/to_Alejandro/clone2.maf', sep='\\t', skiprows=0)\n",
-    "parental = pd.read_csv('~/Downloads/to_Alejandro/Parental.maf', sep='\\t', skiprows=0)\n",
-    "uvb = pd.read_csv('~/Downloads/to_Alejandro/UVB.maf', sep='\\t', skiprows=0)"
+    "c1 = pd.read_csv('../0.Data/clone1.maf', sep='\\t', skiprows=0)\n",
+    "c2 = pd.read_csv('../0.Data/clone2.maf', sep='\\t', skiprows=0)\n",
+    "parental = pd.read_csv('../0.Data/Parental.maf', sep='\\t', skiprows=0)\n",
+    "uvb = pd.read_csv('../0.Data/UVB.maf', sep='\\t', skiprows=0)"
    ]
   },
   {
